welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:11: error: not found: value estSurBIscuit
	if (estSurBIscuit)
            ^