welcome.lessons.welcome.methods.basics.Methods.scala.code
for (i<-0 to 6)
{
	var nbPas:Int =0
	while (!estSurBiscuit)
	{
		avance();
		nbPas=nbPas+1
		
	}
	if (estSurBIscuit)
	{
		prendBiscuit();
	}

	var cp:Int=0;
	while (cp!=nbPas)
	{
		recule();
		cp=cp-1
	}
	poseBiscuit();
	droite();
	avance();
	gauche();
}
